<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@android:color/darker_gray"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_albumart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/albumart"
        android:scaleType="fitXY"
        android:src="@drawable/snow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_artist"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/sample_artist"
                android:textColor="@android:color/black"
                android:layout_marginStart="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="2dp"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:layout_marginEnd="2dp">

                <ImageButton
                    android:id="@+id/btn_rewind"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:src="@drawable/skip_previous"
                    android:contentDescription="@string/controls"
                    />

                <ImageButton
                    android:id="@+id/btn_play_pause"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/controls"
                    android:src="@drawable/play" />

                <ImageButton
                    android:id="@+id/btn_forward"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/controls"
                    android:src="@drawable/skip_next" />

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:contentDescription="@string/controls"
                    android:src="@drawable/stop" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/sample_title"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginStart="5dp" />

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:background="@null"
                android:padding="10dp"
                android:contentDescription="@string/controls"
                android:src="@drawable/setting" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
